--- a/src/Untitled.ipynb
+++ b/src/Untitled.ipynb
@@ -8,6 +8,20 @@
    "source": [
     "consle.log(hello world )\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
